--- a/infection.json5
+++ b/infection.json5
@@ -9,6 +9,8 @@
         "text": "infection.log"
     },
     "mutators": {
-        "@default": true
+        "@default": true,
+        "PublicVisibility": false,
+        "ProtectedVisibility": false
     }
 }
